# react-native-fast-markdown

./: .gitignore  CONTRIBUTING.md  FastMarkdown.podspec  LICENSE  README.md  app.plugin.js  biome.json  biome.jsonc  expo-module.config.json  package-lock.json  package.json  react-native-fast-markdown.podspec  react-native-markdown.podspec  react-native.config.js  tsconfig.build.json  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml
android/: CMakeLists.txt  build.gradle  consumer-rules.pro
android/src/main/cpp/: CMakeLists.txt  JniBindings.cpp  MarkdownParserJni.cpp
android/src/main/java/com/alizahid/markdown/: MarkdownPackage.kt  MarkdownView.kt  MarkdownViewManager.kt
android/src/main/java/com/alizahid/markdown/events/: MarkdownEventDispatcher.kt
android/src/main/java/com/alizahid/markdown/jni/: MarkdownParserJni.kt
android/src/main/java/com/alizahid/markdown/measure/: MarkdownMeasurer.kt  MeasurementCache.kt
android/src/main/java/com/alizahid/markdown/parser/: AstNode.kt
android/src/main/java/com/alizahid/markdown/renderer/: BlockRenderers.kt  BlockquoteRenderer.kt  CodeBlockRenderer.kt  CustomTagRenderer.kt  ImageRenderer.kt  InlineRenderers.kt  ListItemRenderer.kt  ListRenderer.kt  NodeRenderer.kt  RenderContext.kt  RendererFactory.kt  StyleAttributes.kt  TableRenderer.kt
android/src/main/java/com/alizahid/markdown/renderer/spans/: CodeBackgroundSpan.kt  CustomTypefaceSpan.kt  LetterSpacingSpan.kt  LineHeightSpan.kt  LinkClickableSpan.kt  LinkTouchMovementMethod.kt  MentionSpan.kt  MonospaceTypefaceSpan.kt  SpoilerMarkerSpan.kt  SuperscriptScaleSpan.kt
android/src/main/java/com/alizahid/markdown/style/: ElementStyle.kt  StyleConfig.kt  StyleDeserializer.kt
android/src/main/java/com/alizahid/markdown/util/: ColorConvert.kt  TypefaceResolver.kt
android/src/main/java/com/alizahid/markdown/view/: MarkdownBlockView.kt  MarkdownImageSizeCache.kt  MarkdownImageView.kt  MarkdownMentionOverlay.kt  MarkdownPressableOverlay.kt  MarkdownSegmentStack.kt  MarkdownSpoilerOverlay.kt  MarkdownTableLayout.kt  MarkdownTableView.kt  MarkdownTextView.kt
android/src/main/java/com/fastmarkdown/: FastMarkdownNative.kt  FastMarkdownPackage.kt  FastMarkdownView.kt  FastMarkdownViewManager.kt
android/src/main/java/com/fastmarkdown/editor/: EditorSpans.kt  FastMarkdownEditorManager.kt  FastMarkdownEditorView.kt
android/src/main/java/com/fastmarkdown/image/: ImageLoader.kt
android/src/main/java/com/fastmarkdown/measure/: MarkdownMeasurer.kt
android/src/main/java/com/fastmarkdown/parser/: AstDecoder.kt  MdNode.kt
android/src/main/java/com/fastmarkdown/render/: ContentCache.kt  RenderedContent.kt  SpannableRenderer.kt
android/src/main/java/com/fastmarkdown/render/spans/: ChipSpan.kt  InteractiveSpans.kt  MarkdownLineHeightSpan.kt  RunSpan.kt
android/src/main/java/com/fastmarkdown/style/: Fonts.kt  LayoutStyleSpec.kt  PlatformColorResolver.kt  StyleConfig.kt  TextStyleSpec.kt
android/src/main/java/com/fastmarkdown/views/: BlockStackView.kt  BlockTextView.kt  BoxDrawing.kt  MarkdownHost.kt  MarkdownImageView.kt  NestedHorizontalScrollView.kt  TableBlockView.kt
android/src/main/java/com/markdown/: MarkdownEditorView.kt  MarkdownEditorViewManager.kt  MarkdownInputView.kt  MarkdownInputViewManager.kt  MarkdownMeasurer.kt  MarkdownPackage.kt  MarkdownView.kt  MarkdownViewManager.kt
android/src/main/java/com/markdown/parser/: ParserBridge.kt
android/src/main/java/com/markdown/renderer/: MarkdownRenderer.kt
android/src/main/java/com/markdown/renderer/spans/: BlockBackgroundSpan.kt  BlockQuoteSpan.kt  CustomLineHeightSpan.kt  GapSpan.kt  LetterSpacingSpan.kt
android/src/main/java/com/markdown/styles/: StyleConfig.kt
android/src/main/jni/: CMakeLists.txt  MarkdownParserJNI.cpp  MarkdownViewComponentDescriptor.h  MarkdownViewShadowNode.cpp  MarkdownViewShadowNode.h
android/src/main/jni/fabric/react/renderer/components/MarkdownViewSpec/: ComponentDescriptors.h  ComponentDescriptorsRegistration.cpp  MarkdownViewMeasurableShadowNode.cpp  MarkdownViewMeasurableShadowNode.h  MarkdownViewMeasurementsManager.cpp  MarkdownViewMeasurementsManager.h
android/src/main/jni/react/renderer/components/MarkdownViewSpec/: ComponentDescriptors.h
cpp/core/: Ast.h  AstJson.cpp  AstJson.h  AstSerializer.cpp  AstSerializer.h  AstToMarkdown.cpp  AstToMarkdown.h  EditorRuns.cpp  EditorRuns.h  EditorText.cpp  EditorText.h  InlineExtensions.cpp  InlineExtensions.h  Parser.cpp  Parser.h  Preprocess.cpp  Preprocess.h
cpp/custom/: CustomTagParser.cpp  CustomTagParser.hpp
cpp/md4c/: VERSION  md4c.c
cpp/parser/: ASTNode.hpp  MarkdownParser.cpp  MarkdownParser.hpp
cpp/react/: FastMarkdownEditorShadowNode.cpp  FastMarkdownEditorShadowNode.h  FastMarkdownEditorState.h  FastMarkdownMeasurer.cpp  FastMarkdownMeasurer.h  FastMarkdownShadowNode.cpp  FastMarkdownShadowNode.h  FastMarkdownState.h
cpp/tests/: parser_tests.cpp  run_tests.sh
example/: app.json  babel.config.js  metro.config.js  package.json  react-native.config.js  tsconfig.json
example/header-collision-canary/: Canary.mm  HeaderCollisionCanary.podspec
example/plugins/: with-header-collision-canary.js
example/src/: App.tsx  HomeScreen.tsx
ios/: FastMarkdownView.h  FastMarkdownView.mm  MarkdownEditorView.h  MarkdownEditorView.mm  MarkdownInputView.h  MarkdownInputView.mm  MarkdownMeasurer.h  MarkdownMeasurer.mm  MarkdownView.h  MarkdownView.mm
ios/editor/: FastMarkdownEditor.h  FastMarkdownEditor.mm
ios/image/: FMDImageLoader.h  FMDImageLoader.mm
ios/input/: BlockDecorationView.h  BlockDecorationView.m  (+12 more)
src/: FastMarkdownEditor.native.tsx  FastMarkdownEditor.tsx  FastMarkdownEditorNativeComponent.ts  FastMarkdownView.native.tsx  FastMarkdownView.tsx  FastMarkdownViewNativeComponent.ts  Markdown.tsx  MarkdownEditor.tsx  MarkdownEditorNativeComponent.ts  MarkdownInput.tsx  MarkdownInputNativeComponent.ts  MarkdownNativeComponent.ts  defaultStyles.ts  index.tsx  normalizeStyle.ts  serializeStyles.ts  types.ts  useFastMarkdownEditor.ts  useMarkdownEditor.ts  useMarkdownInput.ts
(+114 files in other folders)
